test/libyul/yulSyntaxTests/number_literal_3.yul
{ let x := 1e5 }
// ----
// ParserError 4828: (11-14): Invalid number literal.
